fix: solve layout problems with grid class

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,13 +27,3 @@ body {
     background: var(--background);
     color: var(--foreground);
 }
-
-@media (max-width: 767px) {
-    .grid {
-        display: block !important;
-    }
-
-    main {
-        margin-left: 0 !important;
-    }
-}
